fixed spacing for the detail page (pop up not styled fully yet)

--- a/app/style/app.css
+++ b/app/style/app.css
@@ -215,4 +215,8 @@ h2 {
   justify-content: space-between;
  }
 
+ .container__stretch--header{
+  min-height: 95vh;
+ }
+
 
